added humans.txt and refined fonts on intro

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   <style>
-    @import 'https://fonts.googleapis.com/css?family=Roboto:400,400i,700';
+    @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700';
     body{
       font-family: 'Roboto', sans-serif;
     }
@@ -70,6 +70,7 @@
     }
     .jumbotron h1 {
       font-size: 2em;
+      font-weight: 300;
     }
     .jumbotron h3 {
       font-size: 2em;
@@ -78,6 +79,7 @@
       font-size: 1.5em;
       color: #fff;
       line-height: 130%;
+      font-weight: 300;
     }
     .jumbotron p {
       font-size: 1em;
@@ -208,17 +210,17 @@
         </g>
         </svg>
         </div>
-        <div class="col-md-12 topborder">
+        <div class="col-sm-12 topborder">
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
         <h1>Hi, I'm <strong>Daniel Pape</strong>.</h1>
         <h2>I'm a product designer and front end developer who creates engaging iOS apps. I'm based in London, England</h2>
         <!-- <p>I design graphics and user interfaces and then turn them into code. Based in London, England.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">View Work</a></p> -->
         </div>
-        <div class="col-md-1">
+        <div class="col-sm-1">
         </div>
-        <div class="col-md-7">
+        <div class="col-sm-7">
         <!-- <h3>Quick Links</h3> -->
         <p style="margin-top:20px;"><strong>Apps</strong> <a href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8#">Eve Alarm</a> &#149; <a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8">Mapgrounds</a> &#149; <a href="https://itunes.apple.com/us/app/progress-1000-by-london-evening/id931391607?mt=8">Progress 1000</a> &#149; <a href="https://itunes.apple.com/gb/app/copywriter/id670760844?mt=8">CopyWriter</a></p>
         <p><strong>About</strong> <a onclick="scrollToSection('#work')">My Work</a> &#149; <a onclick="scrollToSection('#whatIdo')">What I do</a></p>
@@ -231,36 +233,36 @@
       <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <div class="topborder" style="padding-bottom:2em;">
           <h1><strong>Work</strong></h1>
           <p>I have designed and coded user interfaces and graphics for many apps on the iOS app store, and had the pleasure of being featured in Apple's human curated 'New &amp; Noteworthy' section. To see all of my apps search the app store for <strong><i>Daniel Pape</i></strong></p>
         </div>
-        <div class="col-md-6 backgroundColor">
+        <div class="col-sm-6 backgroundColor">
           <img src="img/eveAlarm.png" style="width:100%">
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2>Eve Alarm</h2>
           <p>Eve Alarm is an alarm app that uses a custom clickwheel control to interact with the sunset-based user-interface. It was featured in the US &amp; UK app stores for over 6 months.</p>
           <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p>
        </div>
           </div>
         </div>
-        <div class="col-md-12" style="height:2em;"></div>
+        <div class="col-sm-12" style="height:2em;"></div>
       <!-- Example row of columns -->
-        <div class="col-md-4" style="padding-bottom:2em;">
+        <div class="col-sm-4" style="padding-bottom:2em;">
           <img src="img/progress1000.png" style="width:100%">
           <h2>Evening Standard</h2>
           <p>The Progress 1000 by London Evening Standard is an annual event featuring the 1000 most influential people in London. I created a platform for the app from scratch which is responsive to all sizes of iPhone &amp; iPad, and automatically lays out section pages and paginated profile pages with offline image caching.</p>
           <p><a class="btn btn-default" href="https://itunes.apple.com/us/app/progress-1000-by-london-evening/id931391607?mt=8" role="button">Download</a></p>
         </div>
-        <div class="col-md-4" style="padding-bottom:2em;">
+        <div class="col-sm-4" style="padding-bottom:2em;">
           <img src="img/mapgrounds.png" style="width:100%">
           <h2>Mapgrounds</h2>
           <p>Mapgrounds is an app that created beautiful wallpapers for your iPhone, with social sharing and in-app purchases to add new styles.</p>
           <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8" role="button">Download</a></p>
        </div>
-        <div class="col-md-4" style="padding-bottom:2em;">
+        <div class="col-sm-4" style="padding-bottom:2em;">
           <img src="img/stoic.png" style="width:100%">
           <h2>Stoic Sleep</h2>
           <p>Stoic is an app currently in development that is based around sleep therapy, with a platform built for sleep therapists to distribute audio content and sleep-time reminders.</p>
@@ -272,18 +274,18 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <div class="topborder" style="margin-bottom:3em;">
           <h1><strong>What I do</strong></h1>
           <p>I am a product designer with development skills. I have designed and coded user interfaces and graphics for multiple apps on the iOS app store, many of which have been featured in Apple's human curated 'New &amp; Noteworthy' section.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <?xml version="1.0" encoding="UTF-8" standalone="no"?>
           <img src="img/GraphicDesign.png" class="center-block">
           <h2>Graphic Design</h2>
           <p>I have many years experience designing engaging graphics, focused around creating a recognisable visual language for brands that is communicated through logo design and promotional materials. </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <?xml version="1.0" encoding="UTF-8" standalone="no"?>
           <?xml version="1.0" encoding="UTF-8" standalone="no"?>
           <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -292,7 +294,7 @@
           <h2>UI Design</h2>
           <p>I adopt a user-led approach to create engaging, simplified designs that streamline user interactions focused around meeting business goals. </p>
        </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <?xml version="1.0" encoding="UTF-8" standalone="no"?>
           <?xml version="1.0" encoding="UTF-8" standalone="no"?>
           <img src="img/develop.png" class="center-block">
@@ -316,12 +318,12 @@
 
 
 <div class="form-group" style="margin-bottom:0px;margin-top:3em;">
-  <div class="col-md-6 inputGroupContainer" style="margin-bottom:15px;">
+  <div class="col-sm-6 inputGroupContainer" style="margin-bottom:15px;">
   <div class="input-group" style="width:100%;">
   <input name="name" placeholder="Name" class="form-control formStyle" type="text">
     </div>
   </div>
-    <div class="col-md-6 inputGroupContainer" style="margin-bottom:15px;">
+    <div class="col-sm-6 inputGroupContainer" style="margin-bottom:15px;">
     <div class="input-group" style="width:100%;">
   <input name="email" placeholder="E-Mail" class="form-control formStyle" type="text">
     </div>
@@ -332,13 +334,13 @@
 <!-- Text input-->
 
 <div class="form-group" style="margin-bottom:0px;">
-    <div class="col-md-6 inputGroupContainer" style="margin-bottom:15px;">
+    <div class="col-sm-6 inputGroupContainer" style="margin-bottom:15px;">
     <div class="input-group" style="width:100%;">
   <input name="productname" placeholder="Business/Product Name" class="form-control formStyle" type="text">
     </div>
   </div>
 
-    <div class="col-md-6 inputGroupContainer" style="margin-bottom:15px;">
+    <div class="col-sm-6 inputGroupContainer" style="margin-bottom:15px;">
     <div class="input-group" style="width:100%;">
   <input name="productwebsite" placeholder="Business/Product Website" class="form-control formStyle" type="text">
     </div>
@@ -349,8 +351,8 @@
 
 <!-- Button -->
 <div class="form-group" style="margin-bottom:0px;">
-  <label class="col-md-8 control-label"></label>
-  <div class="col-md-8">
+  <label class="col-sm-8 control-label"></label>
+  <div class="col-sm-8">
     <button type="submit" class="btn btn-default btnBottom" onclick="showMessage()">Send</button>
   </div>
 </div>
@@ -363,13 +365,13 @@
   <div class="container">
   <!-- Example row of columns -->
   <div class="row">
-    <div class="col-md-12">
-    <div class="col-md-6">
+    <div class="col-sm-12">
+    <div class="col-sm-6">
       <p>&copy; Daniel Pape 2016</p>
       <p><a href="https://www.twitter.com/danielpape">Twitter</a></p>
       <p><a href="https://www.github.com/danielpape">GitHub</a></p>
     </div>
-    <div class="col-md-6">
+    <div class="col-sm-6">
       <p><a href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8">Eve Alarm <i>App Store</i></a></p>
       <p><a href="https://itunes.apple.com/us/app/progress-1000-by-london-evening/id931391607?mt=8">Evening Standard: Progress 1000 <i>App Store</i></a></p>
       <p><a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8">Mapgrounds <i>App Store</i></a></p>
