--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   <section class="colourBack" id="contact">
 <div class="container">
 
-    <form class="form-horizontal" action="https://formspree.io/danielwpape@gmail.com" method="POST"  id="contact_form">
+    <form class="form-horizontal" action="mailer.php" method="POST"  id="ajax-content">
 <fieldset>
 
 <!-- Form Name -->
@@ -347,7 +347,7 @@
   </div>
 </div>
 <!-- Success message -->
-<div id="success_message"><i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
+<div id="form-messages"></div>
 
 <!-- Button -->
 <div class="form-group" style="margin-bottom:0px;">
@@ -397,6 +397,56 @@
                'scrollTop':   $(nameOfSection).offset().top
              }, 1000);
         };(jQuery);
+
+        $(function() {
+    // Get the form.
+    var form = $('#ajax-content');
+
+    // Get the messages div.
+    var formMessages = $('#form-messages');
+
+    // Set up an event listener for the contact form.
+$(form).submit(function(event) {
+    // Stop the browser from submitting the form.
+    event.preventDefault();
+
+    // Serialize the form data.
+var formData = $(form).serialize();
+// Submit the form using AJAX.
+$.ajax({
+    type: 'POST',
+    url: $(form).attr('action'),
+    data: formData,
+    datatype: "jsonp"
+})
+.done(function(response) {
+    // Make sure that the formMessages div has the 'success' class.
+    $(formMessages).removeClass('error');
+    $(formMessages).addClass('success');
+
+    // Set the message text.
+    $(formMessages).text(response);
+
+    // Clear the form.
+    $('#name').val('');
+    $('#email').val('');
+    $('#productname').val('');
+    $('#productwebsite').val('');
+})
+.fail(function(data) {
+    // Make sure that the formMessages div has the 'error' class.
+    $(formMessages).removeClass('success');
+    $(formMessages).addClass('error');
+
+    // Set the message text.
+    if (data.responseText !== '') {
+        $(formMessages).text(data.responseText);
+    } else {
+        $(formMessages).text('Oops! An error occured and your message could not be sent.');
+    }
+});
+});
+});
     </script>
   </body>
 </html>
