--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="I'm a product designer and front end developer who creates engaging iOS apps based in London, England">
+    <meta name="author" content="Daniel Pape">
+    <meta name="theme-color" content="#00897B">
     <link rel="icon" href="../../favicon.ico">
 
     <title>Daniel Pape : Designer and Front End Developer based in London, England</title>
@@ -214,7 +215,7 @@
         </div>
         <div class="col-sm-4">
         <h1>Hi, I'm <strong>Daniel Pape</strong>.</h1>
-        <h2>I'm a product designer and front end developer who creates engaging iOS apps. I'm based in London, England</h2>
+        <h2>I'm a product designer and front end developer who creates engaging iOS apps based in London, England</h2>
         <!-- <p>I design graphics and user interfaces and then turn them into code. Based in London, England.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">View Work</a></p> -->
         </div>
