--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <fieldset>
                   <div id="contactForm" class="topborder">
                         <h1><strong>Contact</strong></h1>
-                        <p>Feel free to get in touch if you'd like to talk about how we can work together to make your project awesome.</p>
+                        <p>Please get in touch if you'd like to talk about how we can work together to make your project awesome.</p>
                         <div class="form-group" style="margin-bottom:0px;margin-top:3em;">
                             <div class="col-sm-6 inputGroupContainer" style="margin-bottom:15px;">
                                 <div class="input-group" style="width:100%;">
