Started laying out app carousel

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="topborder" style="padding-bottom:2em;">
-                        <h1><strong>Work</strong></h1>
+                        <h1><strong>Featured Work</strong></h1>
                         <p>I have designed and coded user interfaces and graphics for many apps on the iOS app store, and had the pleasure of being featured in Apple's human curated 'New &amp; Noteworthy' section. To see all of my apps search the app store
                             for <strong><i>Daniel Pape</i></strong></p>
                     </div>
@@ -94,31 +94,25 @@
                         <img src="img/eveAlarm.png" style="width:100%">
                     </div>
                     <div class="col-sm-6">
+                      <div id="eveAlarmBox" class="appBox">
                         <h2>Eve Alarm</h2>
                         <p>Eve Alarm is an alarm app that uses a custom clickwheel control to interact with the sunset-based user-interface. It was featured in the US &amp; UK app stores for over 6 months.</p>
+                        <button class="btn btn-small btn-default">Download</button>
+                        <!-- <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p> -->
+                      </div>
+                      <div id="progress1000Box" class="appBox">
+                        <h2>Progress 1000</h2>
+                        <p>The Progress 1000 by London Evening Standard is an annual event featuring the 1000 most influential people in London. I created a platform for the app from scratch which is responsive to all sizes of iPhone &amp; iPad, and automatically
+                            lays out section pages and paginated profile pages with offline image caching.</p>
                         <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p>
+                      </div>
+                      <div  id="mapgroundsBox" class="appBox highlighted">
+                        <h2>Mapgrounds</h2>
+                        <p>Mapgrounds is an app that created beautiful wallpapers for your iPhone, with social sharing and in-app purchases to add new styles.</p>
+                        <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p>
+                      </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-12" style="height:2em;"></div>
-            <div class="col-sm-4" style="padding-bottom:2em;">
-                <img src="img/progress1000.png" style="width:100%">
-                <h2>Evening Standard</h2>
-                <p>The Progress 1000 by London Evening Standard is an annual event featuring the 1000 most influential people in London. I created a platform for the app from scratch which is responsive to all sizes of iPhone &amp; iPad, and automatically
-                    lays out section pages and paginated profile pages with offline image caching.</p>
-                <p><a class="btn btn-default" href="https://itunes.apple.com/us/app/progress-1000-by-london-evening/id931391607?mt=8" role="button">Download</a></p>
-            </div>
-            <div class="col-sm-4" style="padding-bottom:2em;">
-                <img src="img/mapgrounds.png" style="width:100%">
-                <h2>Mapgrounds</h2>
-                <p>Mapgrounds is an app that created beautiful wallpapers for your iPhone, with social sharing and in-app purchases to add new styles.</p>
-                <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8" role="button">Download</a></p>
-            </div>
-            <div class="col-sm-4" style="padding-bottom:2em;">
-                <img src="img/stoic.png" style="width:100%">
-                <h2>Stoic Sleep</h2>
-                <p>Stoic is an app currently in development that is based around sleep therapy, with a platform built for sleep therapists to distribute audio content and sleep-time reminders.</p>
-                <p><a class="btn btn-default disabled" href="#" role="button">Coming Soon</a></p>
             </div>
         </div>
     </section>
@@ -138,15 +132,11 @@
                     </div>
                     <div class="col-sm-4">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-                        <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-                        <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-                        <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <img src="img/UIDesign.png" class="center-block">
                         <h2>UI Design</h2>
                         <p>I adopt a user-led approach to create engaging, simplified designs that streamline user interactions focused around meeting business goals. </p>
                     </div>
                     <div class="col-sm-4">
-                        <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <img src="img/develop.png" class="center-block">
                         <h2>Development</h2>
