Fixed sub-div margins

--- a/index.html
+++ b/index.html
@@ -90,30 +90,30 @@
                         <p>I have designed and coded user interfaces and graphics for many apps on the iOS app store, and had the pleasure of being featured in Apple's human curated 'New &amp; Noteworthy' section. To see all of my apps search the app store
                             for <strong><i>Daniel Pape</i></strong></p>
                     </div>
-                    <div class="col-sm-6 backgroundColor">
-                        <img src="img/eveAlarm.png" style="width:100%">
+                  </div>
+                  <div class="col-sm-6">
+                    <div id="eveAlarmBox" class="appBox highlighted">
+                      <h2>Eve Alarm</h2>
+                      <p>Eve Alarm is an alarm app that uses a custom clickwheel control to interact with the sunset-based user-interface. It was featured in the US &amp; UK app stores for over 6 months.</p>
+                      <button class="btn btn-small btn-default">Download</button>
+                      <!-- <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p> -->
                     </div>
-                    <div class="col-sm-6">
-                      <div id="eveAlarmBox" class="appBox">
-                        <h2>Eve Alarm</h2>
-                        <p>Eve Alarm is an alarm app that uses a custom clickwheel control to interact with the sunset-based user-interface. It was featured in the US &amp; UK app stores for over 6 months.</p>
-                        <button class="btn btn-small btn-default">Download</button>
-                        <!-- <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p> -->
-                      </div>
-                      <div id="progress1000Box" class="appBox">
-                        <h2>Progress 1000</h2>
-                        <p>The Progress 1000 by London Evening Standard is an annual event featuring the 1000 most influential people in London. I created a platform for the app from scratch which is responsive to all sizes of iPhone &amp; iPad, and automatically
-                            lays out section pages and paginated profile pages with offline image caching.</p>
-                        <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p>
-                      </div>
-                      <div  id="mapgroundsBox" class="appBox highlighted">
-                        <h2>Mapgrounds</h2>
-                        <p>Mapgrounds is an app that created beautiful wallpapers for your iPhone, with social sharing and in-app purchases to add new styles.</p>
-                        <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p>
-                      </div>
+                    <div id="progress1000Box" class="appBox">
+                      <h2>Progress 1000</h2>
+                      <p>The Progress 1000 by London Evening Standard is an annual event featuring the 1000 most influential people in London. I created a platform for the app from scratch which is responsive to all sizes of iPhone &amp; iPad, and automatically
+                          lays out section pages and paginated profile pages with offline image caching.</p>
+                      <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p>
                     </div>
-                </div>
-            </div>
+                    <div  id="mapgroundsBox" class="appBox">
+                      <h2>Mapgrounds</h2>
+                      <p>Mapgrounds is an app that created beautiful wallpapers for your iPhone, with social sharing and in-app purchases to add new styles.</p>
+                      <p><a class="btn btn-default" href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" role="button">Download</a></p>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 backgroundColor">
+                      <img src="img/eveAlarm.png" style="width:100%">
+                  </div>
+              </div>
         </div>
     </section>
     <section class="topBottomMargins" style="background-color:#E0F2F1" id="whatIdo">
@@ -124,6 +124,7 @@
                         <h1><strong>What I do</strong></h1>
                         <p>I am a product designer with development skills. I have designed and coded user interfaces and graphics for multiple apps on the iOS app store, many of which have been featured in Apple's human curated 'New &amp; Noteworthy' section.</p>
                     </div>
+                  </div>
                     <div class="col-sm-4">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <img src="img/GraphicDesign.png" class="center-block">
@@ -143,7 +144,6 @@
                         <p>I have developed products from idea to release on iOS, Android &amp; the web using native technologies. I am comfortable writing code in swift, objective-C, javascript &amp; java.</p>
                     </div>
                 </div>
-            </div>
         </div>
     </section>
     <section class="colourBack" id="contact">
